seperated scss and js as files and added sample login functionallity

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,5 @@
-/* src/global.scss */
-@import './custom'; /* Ensure the custom variables are applied */
+@import './custom'; 
 
-/* Typography */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@400;600&display=swap');
 
 body {
