--- a/src/assets/styles/About.scss
+++ b/src/assets/styles/About.scss
@@ -4,6 +4,9 @@
 }
 
 .animated-text-righttoleft {
+  border-bottom: 2px solid #333;
+  padding-bottom: 10px;
+  text-align: center;
   display: inline-block;
   position: relative;
   opacity: 0;
@@ -11,6 +14,9 @@
 }
 
 .animated-text-lefttoright {
+  border-bottom: 2px solid #333;
+  padding-bottom: 10px;
+  text-align: center;
   display: inline-block;
   position: relative;
   opacity: 0;
@@ -32,11 +38,6 @@ body {
 
 h1, h2, h3 {
     color: #333;
-}
-
-h1 {
-    border-bottom: 2px solid #333;
-    padding-bottom: 10px;
 }
 
 ul {
