--- a/src/assets/styles/ListView.scss
+++ b/src/assets/styles/ListView.scss
@@ -20,6 +20,23 @@ body {
   padding: 0;
 }
 
+.btn-left{
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
+
+.btn-center{
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
+
+.btn-right{
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+}
+
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
@@ -96,6 +113,7 @@ h2 {
 
 .house {
   border: 1px solid #ccc;
+  border-opacity: 0.7;
   padding: 16px;
   margin: 16px 0;
 }
@@ -124,5 +142,4 @@ a {
   text-align: left;
   font-size: 1.2rem;
   padding-bottom: 1rem;
-  border-bottom: 1px ridge black;
 }
