styling changes to create and detail page

--- a/src/assets/styles/CreateListing.scss
+++ b/src/assets/styles/CreateListing.scss
@@ -2,4 +2,22 @@
 {
     width: 100%;
     text-align: left;
+    input, select
+    {
+        padding: 0.7rem;
+    }
+}
+
+.edit-background-image
+{
+    background-image: url("../images/img_background@3x.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.form-container
+{
+    width: 30% !important;
+    margin-left: 10rem !important;
+    margin-top: 2rem !important;
 }
