--- a/src/assets/styles/EditListing.scss
+++ b/src/assets/styles/EditListing.scss
@@ -3,3 +3,10 @@
     width: 100%;
     text-align: left;
 }
+
+.edit-background-image
+{
+    background-image: url("../images/img_background@3x.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
