--- a/src/assets/styles/ListView.scss
+++ b/src/assets/styles/ListView.scss
@@ -18,6 +18,7 @@ body {
   background-color: $background-light;
   margin: 0;
   padding: 0;
+  background-image: none !important;
 }
 
 .btn-left{
@@ -142,4 +143,18 @@ a {
   text-align: left;
   font-size: 1.2rem;
   padding-bottom: 1rem;
+}
+
+.input-group .icon-container {
+  pointer-events: none;
+  z-index: 1;
+}
+
+.input-group .icon-container img {
+  pointer-events: auto;
+  z-index: 1;
+}
+
+.input-group input {
+  z-index: 0;
 }
