--- a/src/assets/styles/navbar/Navbar.scss
+++ b/src/assets/styles/navbar/Navbar.scss
@@ -1,25 +1,33 @@
-
-#app {
+@media (min-width: 1025px) {
+  #app {
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #2c3e50;
   }
-  
+
   .navbar {
     padding: 30px;
   }
-  
+
   .navbar .nav-link {
     font-weight: bold;
   }
-  
+
   .navbar .nav-link.router-link-active {
     color: #fff;
     font-weight: 500;
   }
-  
+
   .navbar .nav-link.active {
     background-color: #0056b3;
     color: #fff;
   }
+
+}
+
+@media (max-width: 1024px) {
+  .navbar-wrapper {
+    display: none;
+  }
+}
