--- a/src/custom.scss
+++ b/src/custom.scss
@@ -8,4 +8,12 @@ $danger: #F6F6F6;
 $light: #FFFFFF;
 $dark: #000000;
 
+$primary-color: #EB5440;
+$primary-black: #000000;
+$secondary-color: #4A4B4C;
+$hyperlink-color: #067BC2;
+$tertiary-dark: #C3C3C3;
+$tertiary-light: #C3C3C3;
+$background-light: #F6F6F6;
+$background-white: #FFFFFF;
 @import '~bootstrap/scss/bootstrap';
