--- a/src/assets/styles/listview/ListViewDesktop.scss
+++ b/src/assets/styles/listview/ListViewDesktop.scss
@@ -116,4 +116,12 @@
   #create-listing-link-mobile {
     display: none !important;
   }
+
+  .noresult-img
+  {
+    padding-top: 3rem;
+    padding-left: 10rem;
+    padding-right: 10rem;
+    padding-bottom: 10rem;
+  }
 }
