--- a/src/assets/styles/navbar/Navbar.scss
+++ b/src/assets/styles/navbar/Navbar.scss
@@ -1,9 +1,12 @@
+@import '../../../global.scss';
+
 @media (min-width: 1025px) {
   #app {
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #2c3e50;
+    margin: 0 !important;
   }
 
   .navbar {
@@ -28,6 +31,28 @@
 
 @media (max-width: 1024px) {
   .navbar-wrapper {
+    display: none;
+  }
+}
+
+
+@media (max-width: 1024px) {
+  .footer {
+    display: block;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: $light;
+    color: white;
+    text-align: center;
+  }
+}
+
+
+@media (min-width: 1025px) {
+  .footer
+  {
     display: none;
   }
 }
