--- a/src/assets/styles/detailview/DetailViewMobile.scss
+++ b/src/assets/styles/detailview/DetailViewMobile.scss
@@ -1,3 +1,30 @@
 @media (max-width: 1024px) {
+    .edit-delete-container {
+        position: absolute;
+        top: 0 !important;
+        right: 1rem;
+        display: flex;
+        gap: 1rem;
+        width: 25%;
+    }
 
+    .house-detail-container {
+        border-top-left-radius: 12.5%;
+        border-top-right-radius: 12.5%;
+        padding: 3rem;
+        z-index: 1;
+        margin-top: -2rem;
+    }
+
+    .top-nav-linkwrapper {
+        display: flex;
+        position: absolute;
+        align-items: left;
+        padding: 1rem;
+    }
+
+    .desktop-return
+    {
+        display: none !important;
+    }
 }
