--- a/src/assets/styles/listview/ListViewMobile.scss
+++ b/src/assets/styles/listview/ListViewMobile.scss
@@ -73,6 +73,9 @@
 
   .noresult-img
   {
-    padding: 5rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
