--- a/src/assets/styles/createview/CreateListingMobile.scss
+++ b/src/assets/styles/createview/CreateListingMobile.scss
@@ -1,41 +1,41 @@
 @import './CreateListingStyle.scss';
 
 @media (max-width: 1024px) {
-    .form-container
-    {
-        width: 100% !important;
-        margin-top: 2rem !important;
-    }
 
-    .return-link-mobile
-    {
-        text-decoration: none
-    }
+  .form-wrapper
+  {
+      width: 100% !important;
+      margin-top: 2rem !important;
+  }
+  
+  .pagecontainer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
 
-    .return-link-desktop
-    {
-        display: none;
-    }
+  .return-link-desktop{
+    display: none;
+  }
 
-    .create-new-title
-    {
-        text-align: center;
-    }
+  .return-link-mobile
+  {
+    padding-left: 1rem;
+  }
 
-    .create-new-title-container {
-        display: flex;
-        align-items: center; /* Align items vertically center */
-        justify-content: center; /* Center the text horizontally */
-        position: relative;
-      }
-      
-      .return-link-mobile {
-        position: absolute;
-        left: 0; /* Align the icon to the left */
-      }
-      
-      .create-new-title {
-        margin: 0 auto; /* Center the text */
-        padding: 0 2rem; /* Add padding to prevent overlap with the icon */
-      }
+  .create-new-title
+  {
+      margin: 0;
+      text-align: center !important;
+  }
+
+  .form-control
+  {
+    padding: 1.2rem !important;
+  }
+
+  .form-label 
+  {
+    font-weight: 900;
+  }
 }
