--- a/src/assets/styles/detailview/DetailViewDesktop.scss
+++ b/src/assets/styles/detailview/DetailViewDesktop.scss
@@ -1,3 +1,21 @@
 @media (min-width: 1025px) {
-    
+    .edit-delete-container {
+        position: absolute;
+        top: 0 !important;
+        right: 1rem;
+        display: flex;
+        gap: 1rem;
+        width: 10%;
+    }
+
+    .desktop-delete
+    {
+        display: block;
+        width: 20% !important;
+    }
+
+    .mobile-delete
+    {
+        display: block;
+    }
 }
