--- a/src/assets/styles/detailview/DetailViewMobile.scss
+++ b/src/assets/styles/detailview/DetailViewMobile.scss
@@ -5,7 +5,7 @@
         right: 1rem;
         display: flex;
         gap: 1rem;
-        width: 25%;
+        width: 20%;
     }
 
     .house-detail-container {
@@ -26,5 +26,27 @@
     .desktop-return
     {
         display: none !important;
+    }
+
+    .desktop-delete
+    {
+        display: none;
+    }
+
+    .mobile-delete
+    {
+        display: block;
+    }
+    
+    .mobile-arrow
+    {
+        color: white;
+    }
+
+    .noresult-img{
+        margin-top: 8rem;
+        margin-bottom: 2rem;
+        margin-left: 2rem;
+        margin-left: 2rem;
     }
 }
