--- a/src/assets/styles/editview/EditListingStyle.scss
+++ b/src/assets/styles/editview/EditListingStyle.scss
@@ -1,16 +1,12 @@
-.edit-background-image {
-  background-color: #f0f0f0; /* Example background color */
-}
+@import '../../../global.scss';
 
-.pagecontainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.edit-background-image {
+  background-color: #f0f0f0;
 }
 
 .form-container {
   width: 100%;
-  max-width: 800px; /* Limit form width */
+  max-width: 800px;
   background: #fff;
   padding: 20px;
   border-radius: 10px;
@@ -42,7 +38,8 @@
   margin-bottom: 1rem;
 }
 
-#imageUploadContainer, #imageUpload {
+#imageUploadContainer,
+#imageUpload {
   cursor: pointer;
   border: 2px dashed #ccc;
   padding: 10px;
