--- a/src/assets/styles/listview/ListViewDesktop.scss
+++ b/src/assets/styles/listview/ListViewDesktop.scss
@@ -9,6 +9,32 @@
     background-color: $background-white;
   }
 
+  .adress {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 1.125rem; // 18px / 16px
+    line-height: 1.5;
+    color: $dark;
+  }
+
+  .price {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    font-size: 1.125rem; // 18px / 16px
+    color: $dark;
+  }
+
+  .zip {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 100;
+    font-size: 1.2rem; // 18px / 16px
+    color: $secondary-color;
+  }
+
+  .icon-text{
+    font-size: 0.5rem;
+  }
+
   .filter {
     margin-bottom: 16px;
     display: flex;
@@ -16,12 +42,6 @@
     gap: 8px;
   }
 
-  .house {
-    border: 1px solid #ccc;
-    border-opacity: 0.7;
-    padding: 16px;
-    margin: 16px 0;
-  }
 
   .house-image {
     max-width: 100%;
@@ -123,5 +143,10 @@
     padding-left: 10rem;
     padding-right: 10rem;
     padding-bottom: 10rem;
+  }
+
+  .icon-text
+  {
+    font-size: 1em;
   }
 }
