--- a/src/assets/styles/detailview/DetailViewDesktop.scss
+++ b/src/assets/styles/detailview/DetailViewDesktop.scss
@@ -8,6 +8,11 @@
         width: 10%;
     }
 
+    .modal-content {
+        padding: 16px;
+        width: 25% !important;
+      }
+
     .desktop-delete
     {
         display: block;
