--- a/src/assets/styles/listview/ListViewDesktop.scss
+++ b/src/assets/styles/listview/ListViewDesktop.scss
@@ -79,6 +79,7 @@
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    width: 25%;
   }
 
   .modal-actions {
@@ -139,10 +140,14 @@
 
   .noresult-img
   {
-    padding-top: 3rem;
-    padding-left: 10rem;
-    padding-right: 10rem;
+    padding-top: 10rem;
+    padding-left: 20rem;
+    padding-right: 20rem;
     padding-bottom: 10rem;
+    img
+    {
+      margin-bottom: 3rem;
+    }
   }
 
   .icon-text
