--- a/src/global.scss
+++ b/src/global.scss
@@ -8,18 +8,17 @@ body {
   padding: 0;
 }
 
-/* Headings */
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-  font-size: 2rem; // 32px / 16px (default root font size)
+  font-size: 2rem;
   line-height: 1.2;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  font-size: 1.375rem; // 22px / 16px
+  font-size: 1.375rem;
   line-height: 1.2;
 }
 
@@ -28,70 +27,62 @@ h3,
 .empty-state-message {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  font-size: 1.125rem; // 18px / 16px
+  font-size: 1.125rem; 
   line-height: 1.2;
 }
 
-/* Button and Tabs */
 .button,
 .tabs {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  font-size: 1.125rem; // 18px / 16px
+  font-size: 1.125rem; 
   line-height: 1.2;
 }
 
-/* Back Button Label */
 .back-button-label {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  font-size: 1rem; // 16px / 16px
+  font-size: 1rem;
   line-height: 1.2;
 }
 
-/* Input Field Title */
 .input-field-title {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  font-size: 0.875rem; // 14px / 16px
+  font-size: 0.875rem; 
   line-height: 1.2;
 }
 
-/* Error Message */
 .error-message {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   font-style: italic;
-  font-size: 0.875rem; // 14px / 16px
+  font-size: 0.875rem; 
   line-height: 1.2;
 }
 
-/* Listing Information */
 .listing-information {
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
-  font-size: 1rem; // 16px / 16px
+  font-size: 1rem; 
   line-height: 1.2;
 }
 
-/* Body Text */
 body,
 p {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
-  font-size: 1.125rem; // 18px / 16px
+  font-size: 1.125rem;
   line-height: 1.5;
 }
 
-/* Input Field */
 .input-field {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
-  font-size: 0.875rem; // 14px / 16px
+  font-size: 0.875rem;
   line-height: 1.2;
 }
 
-/* Hyperlinks */
 a {
   color: $success;
   text-decoration: none;
@@ -108,7 +99,7 @@ a {
 }
 
 .image-icon {
-  width: 1rem;
+  width: 2rem;
 }
 
 .bold {
