fixed bug where you cannot redo the upload of images twice

--- a/src/assets/styles/listview/ListViewMobile.scss
+++ b/src/assets/styles/listview/ListViewMobile.scss
@@ -30,7 +30,7 @@
   }
 
   .icon-text{
-    font-size: 0.5rem;
+    font-size: 1rem;
   }
 
   .filter {
@@ -87,7 +87,7 @@
     right: 1rem;
     display: flex;
     gap: 1rem;
-    width: 25%;
+    width: 30% !important;
   }
 
   .noresult-img
