--- a/src/assets/styles/listview/ListViewStyling.scss
+++ b/src/assets/styles/listview/ListViewStyling.scss
@@ -231,3 +231,10 @@ a {
   margin-top: 1rem;
   width: 75%;
 }
+
+#clearImage {
+  position: absolute; 
+  top: 0; 
+  right: 0; 
+  width: 40px;
+}
