--- a/src/assets/styles/createview/CreateListingStyle.scss
+++ b/src/assets/styles/createview/CreateListingStyle.scss
@@ -33,11 +33,12 @@
 }
 
 .image-upload-container {
-    padding-left: 3rem !important;
-    padding-bottom: 3rem !important;
-    padding-right: 3rem !important;
-    padding-top: 3rem !important;
-    width: 40%;
+    // padding-left: 3rem !important;
+    // padding-bottom: 3rem !important;
+    // padding-right: 3rem !important;
+    // padding-top: 3rem !important;
+    height: 15rem;
+    width: 15rem;
 }
 
 .edit-background-image {
