--- a/src/assets/styles/listview/ListViewDesktop.scss
+++ b/src/assets/styles/listview/ListViewDesktop.scss
@@ -7,21 +7,7 @@
     margin: 0 auto;
     padding: 16px;
     background-color: $background-white;
-  }
-
-  .adress {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    font-size: 1.125rem; // 18px / 16px
-    line-height: 1.5;
-    color: $dark;
-  }
-
-  .price {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 600;
-    font-size: 1.125rem; // 18px / 16px
-    color: $dark;
+    margin-left: 10%;
   }
 
   .zip {
@@ -47,6 +33,12 @@
     max-width: 100%;
     height: auto;
     margin-bottom: 16px;
+  }
+
+  .house-image-list
+  {
+    aspect-ratio: 1 / 1;
+    border-radius: 7%;
   }
 
   .description {
@@ -153,5 +145,18 @@
   .icon-text
   {
     font-size: 1em;
+  }
+
+  .edit-delete-container
+  {
+    position: absolute;
+    top: 0 !important;
+    right: 1rem;
+    display: flex;
+    gap: 1rem;
+    width: 50%;
+    padding: 3rem;
+    margin-top: 1rem !important;
+    margin-right: 1rem !important;
   }
 }
