--- a/src/global.scss
+++ b/src/global.scss
@@ -27,7 +27,7 @@ h3,
 .empty-state-message {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  font-size: 1.125rem; 
+  font-size: 1.125rem;
   line-height: 1.2;
 }
 
@@ -35,7 +35,7 @@ h3,
 .tabs {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  font-size: 1.125rem; 
+  font-size: 1.125rem;
   line-height: 1.2;
 }
 
@@ -49,7 +49,7 @@ h3,
 .input-field-title {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  font-size: 0.875rem; 
+  font-size: 0.875rem;
   line-height: 1.2;
 }
 
@@ -57,14 +57,13 @@ h3,
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   font-style: italic;
-  font-size: 0.875rem; 
+  font-size: 0.875rem;
   line-height: 1.2;
 }
 
 .listing-information {
   font-family: 'Open Sans', sans-serif;
-  font-weight: 600;
-  font-size: 1rem; 
+  font-size: 1rem;
   line-height: 1.2;
 }
 
@@ -93,7 +92,7 @@ a {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1500px;
   margin: 0 auto;
   padding: 16px;
 }
@@ -109,6 +108,45 @@ a {
 .image-upload-container {
   border: 2px dashed #ccc;
   position: relative;
+  height: 10rem !important;
+  width: 10rem !important;
+  padding: 10rem;
+}
+
+
+.adress {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 900 !important;
+  font-size: 1.5rem; // 18px / 16px
+  line-height: 1.5;
+  color: $dark;
+}
+
+.price {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  font-size: 1.125rem; // 18px / 16px
+  color: $dark;
+}
+
+.zip {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+  font-size: 1.2rem; // 18px / 16px
+  color: $secondary-color;
+}
+
+.image-preview-container {
+  position: relative;
+  height: 10rem !important;
+  width: 10rem !important;
+  border-radius: 12%;
+  #imgPreview
+  {
+    height: 100%;
+    object-fit: cover;
+    object-position: left;
+  }
 }
 
 .absolute-top-right {
@@ -128,6 +166,8 @@ a {
   padding-bottom: 0;
 }
 
-.pagecontainer{
-  padding-bottom: 7rem;
+@media (max-width: 1024px) {
+  .pagecontainer {
+    padding-bottom: 5rem;
+  }
 }
