--- a/src/assets/styles/listview/ListViewDesktop.scss
+++ b/src/assets/styles/listview/ListViewDesktop.scss
@@ -10,6 +10,11 @@
     margin-left: 10%;
   }
 
+  .container-dekstop
+  {
+    width: 90% !important;
+  }
+
   .zip {
     font-family: 'Open Sans', sans-serif;
     font-weight: 100;
@@ -155,8 +160,11 @@
     display: flex;
     gap: 1rem;
     width: 50%;
-    padding: 3rem;
-    margin-top: 1rem !important;
+    padding: 1rem;
     margin-right: 1rem !important;
+  }
+  
+  .list-heading {
+    font-size: 1.5rem;
   }
 }
