--- a/src/assets/styles/navbar/Navbar.scss
+++ b/src/assets/styles/navbar/Navbar.scss
@@ -16,13 +16,9 @@
     font-weight: bold;
   }
 
-  .navbar .nav-link.router-link-active {
-    color: #fff;
-    font-weight: 500;
-  }
-
   .navbar .nav-link.active {
     text-decoration: none;
+    font-weight: 900 !important;
     color: $dark !important;
   }
 
