--- a/src/global.scss
+++ b/src/global.scss
@@ -11,7 +11,7 @@ body {
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 1.2;
 }
 
@@ -92,7 +92,7 @@ a {
 }
 
 .container {
-  max-width: 1500px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 16px;
 }
@@ -116,8 +116,8 @@ a {
 
 .adress {
   font-family: 'Open Sans', sans-serif;
-  font-weight: 900 !important;
-  font-size: 1.5rem; // 18px / 16px
+  font-weight: 400;
+  font-size: 1.125rem; // 18px / 16px
   line-height: 1.5;
   color: $dark;
 }
