--- a/src/assets/styles/listview/ListViewMobile.scss
+++ b/src/assets/styles/listview/ListViewMobile.scss
@@ -12,21 +12,18 @@
     font-weight: 400;
     font-size: 1rem; // 18px / 16px
     line-height: 1.5;
-    color: $dark;
   }
 
   .price {
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
     font-size: 1rem; // 18px / 16px
-    color: $dark;
   }
 
   .zip {
     font-family: 'Open Sans', sans-serif;
     font-weight: 100;
-    font-size: 1rem; // 18px / 16px
-    color: $secondary-color;
+    font-size: 1rem;
   }
 
   .icon-text{
@@ -41,11 +38,6 @@
 
   .house {
     margin: 8px 0;
-  }
-
-  .modal-content {
-    padding: 16px;
-    width: 100%;
   }
 
   .filter-button-container {
