--- a/src/assets/styles/listview/ListViewMobile.scss
+++ b/src/assets/styles/listview/ListViewMobile.scss
@@ -75,7 +75,7 @@
 
   .edit-delete-container {
     position: absolute;
-    top: 0 !important;
+    top: -1rem !important;
     right: 1rem;
     display: flex;
     gap: 1rem;
